# wb_helper

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  nginx.conf
.beads/: metadata.json
ai-service/: pytest.ini  requirements.txt
ai-service/app/: __init__.py  circuit_breaker.py  config.py  main.py  model_router.py  openrouter_client.py  orchestrator.py  qdrant_service.py  schemas.py
ai-service/app/prompts/: __init__.py  templates.py
ai-service/tests/: test_circuit_breaker.py  test_config.py  test_health.py  test_model_router.py  test_openrouter_client.py  test_orchestrator.py  test_prompts.py  test_qdrant_integration.py  test_qdrant_service.py  test_v1_api.py
backend/: AuthTest.hs  Cargo.toml  README.md  cabal.project.local~  wbhelper.cabal
backend/migrations/: 20250402120000_phase2_core.sql  20250402130000_marketplace_credentials.sql  2026-04-27-add-marketplace-to-seo-tables.sql  20260402100000_phase6_runtime_config_and_usage.sql  20260402113000_phase6_rename_config_audit_columns.sql
backend/src/: App.hs  Config.hs  Domain.hs  Main  Main.hs  ai_contract.rs  ai_proxy.rs  config.rs  lib.rs  main.rs  models.rs  state.rs  usage_quota.rs
backend/src/AI/: CircuitBreaker.hs  ModelRouter.hs  OpenRouter.hs  Orchestrator.hs  Prompts.hs  Qdrant.hs
backend/src/AI/OpenRouter/: Types.hs
backend/src/AI/Qdrant/: Types.hs
backend/src/API/: .gitkeep
backend/src/Api/: Endpoints.hs  Routes.hs  SEO.hs
backend/src/Api/Ozon/: Client.hs  Response.hs  Types.hs
backend/src/Api/WB/: Client.hs  Response.hs  Types.hs
backend/src/App/: Hello.hs
backend/src/Auth/: JWT.hs  Middleware.hs  Session.hs
backend/src/Database/: Migration.hs  Schema.hs
backend/src/Domain/: .gitkeep  Margin.hs  Marketplace.hs  PriceAnalysis.hs  SEO.hs
backend/src/Effect/: AppEffect.hs  Error.hs  Reader.hs  State.hs
backend/src/Infra/: Cache.hs  HttpClient.hs  RateLimit.hs  Retry.hs
backend/src/Infra/HttpClient/: Base.hs
backend/src/Infra/RateLimit/: TokenBucket.hs  UsageTracker.hs
backend/src/Infrastructure/: .gitkeep
backend/src/Integration/: Marketplace.hs
backend/src/Integration/Ozon/: SEO.hs
backend/src/Integration/WB/: SEO.hs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/cache/: mod.rs
backend/src/marketplace/: mod.rs  ozon.rs  wb.rs
backend/src/rate_limit/: keyed.rs  mod.rs  token_bucket.rs
backend/src/retry/: mod.rs
backend/src/sync/: handlers.rs  mod.rs  ozon_parse.rs  service.rs
backend/test/: Spec.hs
backend/test/AI/: CircuitBreakerSpec.hs  ModelRouterSpec.hs  OpenRouterClusteringSpec.hs  OpenRouterSpec.hs  OrchestratorSpec.hs  PromptsSpec.hs  QdrantSpec.hs
backend/test/Api/: SEOSpec.hs
backend/test/Api/Ozon/: ClientSpec.hs
backend/test/Api/WB/: ClientSpec.hs
backend/test/Auth/: JWTSpec.hs  MiddlewareSpec.hs
backend/test/Database/: SchemaSpec.hs
backend/test/Domain/: MarginSpec.hs  PriceAnalysisSpec.hs  SEOSpec.hs
backend/test/Effect/: AppEffectSpec.hs
backend/test/Infra/: CacheSpec.hs  RateLimitSpec.hs  RetrySpec.hs
backend/test/Infra/HttpClient/: BaseSpec.hs
backend/test/Infra/RateLimit/: UsageTrackerSpec.hs
backend/test/Integration/: EndpointsSpec.hs
backend/test/Integration/Ozon/: SEOSpec.hs
backend/test/Integration/WB/: SEOSpec.hs
backend/tests/: hello_world.rs  integration_pool.rs  marketplace_wiremock.rs  quota_enforcement.rs  retry_wiremock.rs
docs/: security-audit.md
docs/recharts/: animation-performance.md  chart-components-api.md  comprehensive-documentation.md  responsive-container.md  tooltip-legend-configuration.md  typescript-props.md
docs/superpowers/plans/: 2026-04-01-monorepo-init.md  2026-04-02-ai-orchestration-phase3.md
docs/superpowers/specs/: 2026-04-01-monorepo-init-design.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/playwright-report/: index.html
frontend/scripts/: scan-secrets-dist.mjs
frontend/src/: App.test.tsx  App.tsx  AppRoutes.tsx  globals.css  i18n.ts  index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/__tests__/: Hello.test.tsx  index.css.test.ts  jest-dom.d.ts  setup.ts  setup.tsx
frontend/src/api/: ai.ts  auth.ts  client.ts  monitoring.ts  types.ts
frontend/src/components/: MarketplaceProvider.tsx
frontend/src/hooks/: useCompetitorPrices.ts  useLocaleFormat.ts  useMonitoringProducts.ts  useNicheAnalysis.ts  usePricingStrategies.ts  useReturnsForecast.ts  useSeoClusters.ts  useSeoContent.ts  useSeoDropped.ts  useSeoKeywords.ts  useSeoPositions.ts  useTranslation.ts
frontend/src/i18n/: en.json  index.ts  ru.json
frontend/src/lib/: localeFormat.test.ts  localeFormat.ts  nicheTransform.test.ts  nicheTransform.ts  quota.ts  returnsForecast.test.ts  returnsForecast.ts  seoGeneration.test.ts  seoGeneration.ts
frontend/src/pages/: CompetitorsPage.tsx  Hello.tsx  LoginPage.tsx  MonitoringPage.tsx  NicheAnalysisPage.tsx  OptimizationPage.tsx  PlaceholderToolPage.tsx  PricingOptimizationPage.tsx  RegisterPage.tsx  ReturnsForecastPage.tsx  SEOContentPage.tsx  SeoContentPage.tsx  index.ts
frontend/src/routes/: SeoRoutes.tsx
frontend/src/stores/: authStore.ts  demoStore.test.ts  demoStore.ts  sessionStore.ts  sidebarStore.ts  themeStore.ts  uiStore.ts  usageStore.ts
frontend/src/test/: test-utils.tsx
infra/: Dockerfile.ai-service  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
infra/nginx/: default.conf
infra/systemd/: wb-helper-compose.service
plan/: 01-seo-module.md  02-bidder.md  03-ab-test-photo.md  04-browser-plugin.md  05-review-bot-telegram.md  06-position-bot-telegram.md  07-ad-rate-bot-telegram.md  08-category-guide.md  README.md
scripts/: generate-ssl.sh  load-test.sh
test/: TestEffectStack.hs  TestK.hs
tests/: README.md
tests/e2e/: e2e.spec.ts  hello.spec.ts  package-lock.json  package.json  playwright.config.ts
tests/load/: README.md  ai_proxy_load.mjs
(+101 files in other folders)
