cabal-version:      3.0
name:                wbhelper
version:            0.1.0.0
synopsis:           Marketplace Seller Optimizer (WB/Ozon)
description:         Haskell backend for seller optimization
license:             MIT
author:              dfr
build-type:          Simple

common shared
  default-language:  GHC2021
  default-extensions:
    DataKinds
    TypeOperators
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
  build-depends:
    base >= 4.17 && < 5

library
  import:           shared
  exposed-modules:
    Config
    App
    App.Hello
    Effect.AppEffect
    Effect.Error
    Effect.Reader
    Effect.State
    Infra.HttpClient
    Infra.HttpClient.Base
    Infra.Cache
    Infra.RateLimit
    Infra.RateLimit.TokenBucket
    Infra.Retry
    Auth.JWT
    Auth.Middleware
    Auth.Session
    Api.Ozon.Client
    Api.Ozon.Types
    Api.Ozon.Response
    Api.WB.Client
    Api.WB.Types
    Api.WB.Response
    Api.Endpoints
    Api.Routes
    Integration.Marketplace
    Domain.Margin
    Domain.PriceAnalysis
    Database.Schema
    Database.Migration
  other-modules:
    Main
  hs-source-dirs:   src
  build-depends:
    effectful
    , effectful-core
    , lens
    , aeson
    , text
    , bytestring
    , containers
    , http-client
    , http-types
    , network-uri
    , stm
    , time
    , cryptohash-sha256
    , base64-bytestring
    , scrypt
    , random

executable wbhelper
  import:           shared
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
    wbhelper
    , effectful
    , text
    , bytestring
    , aeson

test-suite spec
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    Effect.AppEffectSpec
    Infra.CacheSpec
    Infra.HttpClient.BaseSpec
    Auth.JWTSpec
    Auth.MiddlewareSpec
    Api.Ozon.ClientSpec
    Api.WB.ClientSpec
    Domain.MarginSpec
    Domain.PriceAnalysisSpec
    Integration.EndpointsSpec
    Database.SchemaSpec
    Infra.RetrySpec
    Infra.RateLimitSpec
  build-depends:
    wbhelper
    , effectful
    , effectful-core
    , hspec
    , aeson
    , text
    , bytestring
    , containers
    , http-client
    , http-types
    , stm
    , time
    , async
    , cryptohash-sha256
    , base64-bytestring
    , scrypt
    , random
    , lens
