cabal-version:      3.0
name:                wbhelper
version:            0.1.0.0
synopsis:           Marketplace Seller Optimizer (WB/Ozon)
description:         Haskell backend for seller optimization
license:             MIT
author:              dfr
build-type:          Simple

common shared
  default-language:  GHC2021
  default-extensions:
    DataKinds
    TypeOperators
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
  build-depends:
    base >= 4.17 && < 5

library
  import:           shared
  exposed-modules:
    Config
    App
    App.Hello
    Effect.AppEffect
    Effect.Error
    Effect.Reader
    Effect.State
    Infra.HttpClient
    Infra.HttpClient.Base
    Infra.Cache
    Infra.RateLimit
    Infra.RateLimit.TokenBucket
    Infra.RateLimit.UsageTracker
    Infra.Retry
    Auth.JWT
    Auth.Middleware
    Auth.Session
    Api.Ozon.Client
    Api.Ozon.Types
    Api.Ozon.Response
    Api.WB.Client
    Api.WB.Types
    Api.WB.Response
    Api.Endpoints
    Api.Routes
    Integration.Marketplace
    Domain.Margin
    Domain.PriceAnalysis
    Domain.Marketplace
    Domain.SEO
    Database.Schema
    Database.Migration
    AI.OpenRouter
    AI.OpenRouter.Types
    AI.ModelRouter
    AI.CircuitBreaker
    AI.Qdrant
    AI.Qdrant.Types
    AI.Prompts
    AI.Orchestrator
  other-modules:
    Main
  hs-source-dirs:   src
  build-depends:
    effectful
    , effectful-core
    , lens
    , aeson
    , text
    , bytestring
    , containers
    , vector
    , http-client
    , http-types
    , case-insensitive
    , network-uri
    , stm
    , time
    ,     cryptohash-sha256
    , crypton
    , SHA
    , base64-bytestring
    , scrypt
    , random
    , digest

executable wbhelper
  import:           shared
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
    wbhelper
    , effectful
    , text
    , bytestring
    , aeson

test-suite spec
  import:           shared
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    Auth.JWTSpec
    Auth.MiddlewareSpec
    Domain.MarginSpec
    Domain.PriceAnalysisSpec
    AI.OpenRouterSpec
    AI.QdrantSpec
    AI.PromptsSpec
    AI.OrchestratorSpec
    Infra.RateLimitSpec
    Infra.RateLimit.UsageTrackerSpec
  build-depends:
    wbhelper
    , effectful
    , effectful-core
    , hspec
    , aeson
    , text
    , bytestring
    , containers
    , vector
    , http-client
    , http-types
    , stm
    , time
    , async
    , cryptohash-sha256
    , base64-bytestring
    , scrypt
    , random
    , lens